feat: 添加根据医生id查找问诊信息接口
