# router/base_consult.go
@@ -10,5 +10,7 @@ func InitConsultRouter(Router *gin.RouterGroup)  {
 	{
 		consultRouter.POST("add",api.AddConsult)
 		consultRouter.POST("findByUser",api.FindConsultByUser)
+		consultRouter.POST("findByDoctor",api.FindConsultByDoctor)
+
 	}
 }
